# figaro-v2

./: .gitignore  pyproject.toml  requirements.txt
figaro/: train.py
figaro.egg-info/: PKG-INFO  SOURCES.txt
figaro/chord_recognition/: evaluate.py  prepare_data.py  utils.py  v1.py
figaro/chord_recognition/algorithms/: bar_wise_template.py  chroma_scores.py  extract.py  heuristic_scores.py
figaro/config/: train.yaml
figaro/data/: collators.py  dataset.py  test.py  utils.py
figaro/preprocessing/: base.py  remi.py  utils.py
figaro/tokenizers/: __init__.py  remi.py
remi-plus/: preprocessor_config.json
remi-processor/: preprocessor_config.json
remi_tokenizer/: tokenizer.json  tokenizer_config.json
